[package]
name = "http"
version = "0.1.0"
edition = "2021"
authors = ["i4 <i4@uauth.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
askama = { version = "0.11", git = "https://github.com/djc/askama.git", features = [
    "serde-json",
    "with-axum",
    "markdown",
] }
askama_axum = { version = "0.1", git = "https://github.com/djc/askama.git" }
askama_derive = "0.11.2"
axum = { version = "0.5.16", features = [
	 "headers",
] }
axum-macros = "0.2.3"
serde = { version = "1" , features = ["derive"] }
serde_yaml = "0.9.13"
glob = "0.3.0"
chrono = "0.4.22"
git2 = "0.15.0"
headers = "0.3.8"
hmac = "0.12.1"
sha2 = "0.10.6"
hyper = "0.14.20"

[dependencies.tower]
version = "0.4.13"
features = ["full"]

[dependencies.tower-http]
version = "0.3.4"
features = ["full"]


# needs pkg-config
