[package]
name = "http"
version = "0.1.0"
edition = "2021"
authors = ["i4 <i4@uauth.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum-macros = "0.4"
axum-server = "0.6"
axum = { version = "0.7", features = ["macros"]}
askama = { version = "0.12.1", features = [
    "serde-json",
    "with-axum",
    "markdown",
] }
askama_axum = "0.4"
askama_derive = "0.11.2"
serde = { version = "1" , features = ["derive"] }
serde_yaml = "0.9.13"
glob = "0.3"
chrono = "0.4"
git2 = "0.18.3"
headers = "0.4"
hmac = "0.12"
sha2 = "0.10"
hyper = { version = "1.3", features = ["server", "http2","http1"]}
tower = { version = "0.4", features = ["full"]}
tower-http = { version = "0.5", features = ["full"]}
